# bINsUID

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  nfpm.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
binsuid/: __init__.py  __main__.py  cli.py  models.py  utils.py
binsuid/analysis/: ranking.py
binsuid/capabilities/: __init__.py  knowledge.py
binsuid/exploit/: __init__.py  builtin.py  executor.py  path_hijack.py  selector.py
binsuid/gtfobins/: __init__.py  database.py
binsuid/scanner/: __init__.py  capabilities.py  engine.py  groups.py  path_audit.py  persistence.py  process_caps.py  sgid.py  sudo_scan.py  suid.py
binsuid/ui/: __init__.py  banner.py  display.py
debian/: binsuid.manpages  changelog  control  copyright  rules
docs/: INSTALL.es.md  INSTALL.md  LEEME-LAB.txt
man/: binsuid.1
packaging/: KALI-SUBMISSION.md
packaging/debian/: binsuid
packaging/kali/: changelog  control.template
scripts/: binsuid-scan.sh  get-binsuid.sh  install-git-hooks.sh  install-kali.sh  install-minimal.sh  run-no-install.sh  strip-cursor-history.sh  update-gtfobins.py  upgrade-binsuid.sh
scripts/hooks/: prepare-commit-msg
tests/: test_audit_fixes.py  test_auto_escalation.py  test_capabilities.py  test_cli.py  test_groups.py  test_gtfobins.py  test_path_audit.py  test_path_hijack.py  test_persistence.py  test_ranking.py  test_sgid.py  test_sudo_parse.py
