[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binsuid"
version = "1.2.3"
description = "Automatic SUID, SGID, capabilities and sudo privilege escalation for Linux"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
authors = [{ name = "Cyberdark Security" }]
keywords = ["security", "suid", "gtfobins", "privilege-escalation", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0"]

[project.scripts]
binsuid = "binsuid.cli:main"

[project.urls]
Homepage = "https://github.com/Cyberdark-Security/bINsUID"
Documentation = "https://github.com/Cyberdark-Security/bINsUID#readme"
Repository = "https://github.com/Cyberdark-Security/bINsUID"
Issues = "https://github.com/Cyberdark-Security/bINsUID/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["binsuid*"]

[tool.setuptools.package-data]
binsuid = ["data/*.json"]

[tool.pytest.ini_options]
markers = [
    "linux: requires Linux-specific semantics (SGID bit, etc.)",
]
